[package]
name = "sssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-queue = "0.2.6"
crossterm = "0.27.0"
once_cell = "1.18.0"
termios = "0.3.3"

[[bin]]
name = "sssh"
path = "src/main.rs"
